@@ -1,5 +1,12 @@
 2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build] Move "siginfo_t .si_errno" check to configure.in.
+
+	* rcsutil.c: Do s/has_si_errno/defined HAVE_SI_ERRNO/g.
+	* conf.sh: Remove "siginfo_t .si_errno" check.
+
+2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build] Move "unlink on unwritable files" check to configure.in.
 
 	* rcsbase.h: Do s/bad_unlink/BAD_UNLINK/g.
